# Axtell-Reboot

./: .gitignore  docker-compose.yml
server/: .env  .env.example  .gitignore  Cargo.toml  diesel.toml  schema.graphql
server/migrations/2025-06-03-134807_basic_schema/: down.sql  up.sql
server/src/: db.rs  lib.rs  main.rs  schema.rs
server/src/api/: challenge.rs  comment.rs  mod.rs  post.rs  relay.rs  response.rs  user.rs
server/src/db/: mod.rs  repo.rs
server/src/models/: challenge.rs  challenge_type.rs  comment.rs  mod.rs  post.rs  response.rs  user.rs
server/src/server/: auth.rs  errors.rs  mod.rs
web/: Dockerfile  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml
