[package]
name = "axtell-server"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
members = ["tools/cargo-bin"]

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "chrono", "serde_json"] }
dotenvy = "0.15.7"
actix-web = "4"
anyhow = "1.0.98"
cargo-run-bin = { version = "1.7.4", default-features = false }
diesel_full_text_search = "2.2.0"
chrono = { version = "0.4.41", features = ["serde"] }
diesel-async = { version = "0.5.2", features = ["deadpool", "postgres"] }
serde = "1.0.219"
serde_json = "1.0.140"
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
deadpool = "0.12.2"
base64 = "0.22.1"
async-lock = "3.4.0"
juniper = { version = "0.16.2", features = ["chrono", "schema-language"] }
juniper_actix = "0.6.0"
paste = "1.0.15"
actix-cors = "0.7.1"
dataloader = "0.18.0"
futures = "0.3.31"
actix-web-httpauth = "0.8.2"
alcoholic_jwt = "4091.0.0"
derive_more = "2.0.1"
reqwest = { version = "0.12.22", features = ["brotli", "deflate", "gzip", "json", "zstd"] }

[package.metadata.bin]
diesel_cli = { version = "2.2.10", default-features = false, features = [
    "postgres",
] }
cargo-binstall = { version = "1.12.6" }
